<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.roland.myapplication.AddAResistance"
    android:background="@color/White">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dip"
        android:layout_centerInParent="true"
        android:background="@drawable/image5"
        android:orientation="vertical"
        android:alpha="0.3"
        >
    </LinearLayout>

    <TextView
        android:id="@+id/main_text_view"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/Black"
        android:text="@string/titleAddRes"
        />

    <TextView
        android:id="@+id/nomber_rings_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_text_view"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:textColor="@color/Black"
        android:textStyle="bold"
        android:text="@string/ringsNbr"
        />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:layout_alignParentEnd="true"
        />

    <TextView
        android:id="@+id/colors_rings_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nomber_rings_text"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textColor="@color/Black"
        android:textStyle="bold"
        android:text="@string/ringColor"
        />
    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_below="@id/colors_rings_text"
        android:layout_marginTop="20dp"
        android:layout_alignParentStart="true"
        />
    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_below="@id/colors_rings_text"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        />
    <Spinner
        android:id="@+id/spinner4"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_below="@id/colors_rings_text"
        android:layout_marginTop="20dp"
        android:layout_alignParentEnd="true"
        />
    <Spinner
        android:id="@+id/spinner5"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_below="@id/spinner2"
        android:layout_marginTop="20dp"
        android:layout_alignParentStart="true"
        />
    <Spinner
        android:id="@+id/spinner6"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_below="@id/spinner2"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        />
    <Spinner
        android:id="@+id/spinner7"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_below="@id/spinner2"
        android:layout_marginTop="20dp"
        android:layout_alignParentEnd="true"
        />

    <TextView
        android:id="@+id/resultat_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner5"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/Black"
        android:text="@string/givingResultText"
        />

    <TextView
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:id="@+id/total"
        android:background="@color/Gray"
        android:layout_marginTop="31dp"
        android:textSize="25sp"
        android:textAlignment="center"
        android:textColor="@color/White"
        android:layout_below="@+id/resultat_text"
        android:layout_toStartOf="@+id/signe"
        />

    <TextView
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:id="@+id/unity"
        android:background="@color/Gray"
        android:textSize="25sp"
        android:textAlignment="center"
        android:text="@string/resUnity"
        android:textColor="@color/White"
        android:layout_alignTop="@+id/total"
        android:layout_alignEnd="@+id/spinner1"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/temp_coeff"
        android:background="@color/Gray"
        android:textSize="25sp"
        android:text="Temp. Coeff. : "
        android:layout_below="@+id/total"
        android:textColor="@color/White"
        />

    <TextView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/signe"
        android:background="@color/Gray"
        android:textSize="25sp"
        android:text="@string/plusMinusText"
        android:textColor="@color/White"
        android:layout_alignTop="@+id/total"
        android:layout_toStartOf="@+id/tolerance" />

    <TextView
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:id="@+id/tolerance"
        android:background="@color/Gray"
        android:textSize="25sp"
        android:textAlignment="center"
        android:textColor="@color/White"
        android:layout_alignTop="@+id/unity"
        android:layout_toStartOf="@+id/spinner1"
        />

    <Button
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homeButtonText"
        android:textStyle="bold"
        android:background="@drawable/my_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="callHome"
        />



</RelativeLayout>
